Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105955

[REGRESSION] Web Engine views are painted only partially

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.4.0
    • 6.4.0 Beta3, 6.5.0 FF
    • WebEngine
    • None
    • All
    • ecfa2f0973 (qt/qtwebengine/dev) 2688ab3da9 (qt/qtwebengine/6.4) 2688ab3da9 (qt/qtwebengine/6.4.0) 2688ab3da9 (qt/tqtc-qtwebengine/6.4) 2688ab3da9 (qt/tqtc-qtwebengine/6.4.0)

      In current dev, only a quarter of the content of a Web Engine view is painted on the screen (see attached screenshot). When scrolling, the view, the content in that quarter does get updated, so it seems the rendering is correct.

      Both widgets and quick APIs are affected, so this can be reproduced with simplebrowser or quicknanobrowser.

      Seen so far on dev/102-based and arm64-macOS, verifying currently that it is also a problem with 6.4.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mnegyokru Martin Negyokru
            mibrunin Michael Bruning
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes